// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Visual Regression Tests > Badge Component Screenshots > should match badge groups screenshot 1`] = `
<div
  class="p-4 bg-white space-y-4"
>
  <div
    class="flex flex-wrap gap-1"
  >
    <span
      class="badge inline-flex items-center gap-1.5 font-semibold transition-all duration-200 transform hover:scale-105 focus:outline-none focus:ring-2 focus:ring-offset-1 shadow-sm badge-outline hover:shadow-md badge-sm"
    >
      <span
        class="truncate"
      >
        React
      </span>
    </span>
    <span
      class="badge inline-flex items-center gap-1.5 font-semibold transition-all duration-200 transform hover:scale-105 focus:outline-none focus:ring-2 focus:ring-offset-1 shadow-sm badge-outline hover:shadow-md badge-sm"
    >
      <span
        class="truncate"
      >
        TypeScript
      </span>
    </span>
    <span
      class="badge inline-flex items-center gap-1.5 font-semibold transition-all duration-200 transform hover:scale-105 focus:outline-none focus:ring-2 focus:ring-offset-1 shadow-sm badge-outline hover:shadow-md badge-sm"
    >
      <span
        class="truncate"
      >
        Tailwind
      </span>
    </span>
    <span
      class="badge inline-flex items-center gap-1.5 font-semibold transition-all duration-200 transform hover:scale-105 focus:outline-none focus:ring-2 focus:ring-offset-1 shadow-sm badge-outline hover:shadow-md badge-sm"
    >
      <span
        class="truncate"
      >
        Storybook
      </span>
    </span>
  </div>
  <div
    class="flex flex-wrap gap-1"
  >
    <span
      class="badge inline-flex items-center gap-1.5 font-semibold transition-all duration-200 transform hover:scale-105 focus:outline-none focus:ring-2 focus:ring-offset-1 shadow-sm badge-neutral shadow-neutral/25 hover:shadow-lg hover:shadow-neutral/40 badge-sm"
    >
      <span
        class="truncate"
      >
        New
      </span>
    </span>
    <span
      class="badge inline-flex items-center gap-1.5 font-semibold transition-all duration-200 transform hover:scale-105 focus:outline-none focus:ring-2 focus:ring-offset-1 shadow-sm badge-secondary shadow-secondary/20 hover:shadow-md badge-sm"
    >
      <span
        class="truncate"
      >
        Updated
      </span>
    </span>
    <span
      class="badge inline-flex items-center gap-1.5 font-semibold transition-all duration-200 transform hover:scale-105 focus:outline-none focus:ring-2 focus:ring-offset-1 shadow-sm badge-error shadow-error/25 hover:shadow-lg hover:shadow-error/40 badge-sm"
    >
      <span
        class="truncate"
      >
        Deprecated
      </span>
    </span>
  </div>
  <div
    class="flex items-center gap-2"
  >
    <span>
      Status:
    </span>
    <span
      class="badge inline-flex items-center gap-1.5 font-semibold transition-all duration-200 transform hover:scale-105 focus:outline-none focus:ring-2 focus:ring-offset-1 shadow-sm badge-outline hover:shadow-md badge-sm border-green-500 text-green-700"
    >
      <span
        class="truncate"
      >
        <span
          class="w-2 h-2 bg-green-500 rounded-full mr-1"
        />
        Active
      </span>
    </span>
  </div>
</div>
`;

exports[`Visual Regression Tests > Badge Component Screenshots > should match badge variants screenshot 1`] = `
<div
  class="p-4 bg-white"
>
  <div
    class="flex flex-wrap gap-2"
  >
    <span
      class="badge inline-flex items-center gap-1.5 font-semibold transition-all duration-200 transform hover:scale-105 focus:outline-none focus:ring-2 focus:ring-offset-1 shadow-sm badge-neutral shadow-neutral/25 hover:shadow-lg hover:shadow-neutral/40 badge-sm"
    >
      <span
        class="truncate"
      >
        Default
      </span>
    </span>
    <span
      class="badge inline-flex items-center gap-1.5 font-semibold transition-all duration-200 transform hover:scale-105 focus:outline-none focus:ring-2 focus:ring-offset-1 shadow-sm badge-secondary shadow-secondary/20 hover:shadow-md badge-sm"
    >
      <span
        class="truncate"
      >
        Secondary
      </span>
    </span>
    <span
      class="badge inline-flex items-center gap-1.5 font-semibold transition-all duration-200 transform hover:scale-105 focus:outline-none focus:ring-2 focus:ring-offset-1 shadow-sm badge-error shadow-error/25 hover:shadow-lg hover:shadow-error/40 badge-sm"
    >
      <span
        class="truncate"
      >
        Destructive
      </span>
    </span>
    <span
      class="badge inline-flex items-center gap-1.5 font-semibold transition-all duration-200 transform hover:scale-105 focus:outline-none focus:ring-2 focus:ring-offset-1 shadow-sm badge-outline hover:shadow-md badge-sm"
    >
      <span
        class="truncate"
      >
        Outline
      </span>
    </span>
    <span
      class="badge inline-flex items-center gap-1.5 font-semibold transition-all duration-200 transform hover:scale-105 focus:outline-none focus:ring-2 focus:ring-offset-1 shadow-sm badge-neutral shadow-neutral/25 hover:shadow-lg hover:shadow-neutral/40 badge-sm"
    >
      <span
        class="truncate"
      >
        123
      </span>
    </span>
    <span
      class="badge inline-flex items-center gap-1.5 font-semibold transition-all duration-200 transform hover:scale-105 focus:outline-none focus:ring-2 focus:ring-offset-1 shadow-sm badge-secondary shadow-secondary/20 hover:shadow-md badge-sm"
    >
      <span
        class="truncate"
      >
        <span
          class="w-2 h-2 bg-green-500 rounded-full mr-1"
        />
        Online
      </span>
    </span>
    <span
      class="badge inline-flex items-center gap-1.5 font-semibold transition-all duration-200 transform hover:scale-105 focus:outline-none focus:ring-2 focus:ring-offset-1 shadow-sm badge-outline hover:shadow-md badge-sm"
    >
      <span
        class="truncate"
      >
        🔥 Hot
      </span>
    </span>
  </div>
</div>
`;

exports[`Visual Regression Tests > Button Component Screenshots > should match button states screenshot 1`] = `
<div
  class="p-4 space-y-2 bg-white"
>
  <button
    class="btn bg-primary h-10 btn-primary btn-md"
    type="button"
  >
    Normal
  </button>
  <button
    aria-disabled="true"
    class="btn bg-primary h-10 btn-primary btn-md"
    disabled=""
    type="button"
  >
    Disabled
  </button>
  <button
    aria-busy="true"
    aria-disabled="true"
    class="btn bg-primary h-10 btn-primary btn-md"
    disabled=""
    type="button"
  >
    <svg
      aria-hidden="true"
      class="animate-spin h-4 w-4"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        class="opacity-25"
        cx="12"
        cy="12"
        r="10"
        stroke="currentColor"
        stroke-width="4"
      />
      <path
        class="opacity-75"
        d="m4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"
        fill="currentColor"
      />
    </svg>
  </button>
  <button
    aria-busy="true"
    aria-disabled="true"
    class="btn bg-primary h-10 btn-primary btn-md"
    disabled=""
    type="button"
  >
    <svg
      aria-hidden="true"
      class="animate-spin h-4 w-4"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        class="opacity-25"
        cx="12"
        cy="12"
        r="10"
        stroke="currentColor"
        stroke-width="4"
      />
      <path
        class="opacity-75"
        d="m4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"
        fill="currentColor"
      />
    </svg>
    <span>
      Processing...
    </span>
  </button>
</div>
`;

exports[`Visual Regression Tests > Button Component Screenshots > should match button variants screenshot 1`] = `
<div
  class="p-4 space-y-2 bg-white"
>
  <div
    class="space-x-2"
  >
    <button
      class="btn bg-primary h-10 btn-primary btn-md"
      type="button"
    >
      Default
    </button>
    <button
      class="btn bg-primary h-10 btn-error btn-md"
      type="button"
    >
      Destructive
    </button>
    <button
      class="btn bg-primary h-10 btn-outline btn-md"
      type="button"
    >
      Outline
    </button>
    <button
      class="btn bg-primary h-10 btn-secondary btn-md"
      type="button"
    >
      Secondary
    </button>
    <button
      class="btn bg-primary h-10 btn-ghost btn-md"
      type="button"
    >
      Ghost
    </button>
    <button
      class="btn bg-primary h-10 btn-link btn-md"
      type="button"
    >
      Link
    </button>
  </div>
  <div
    class="space-x-2"
  >
    <button
      class="btn bg-primary h-10 btn-primary btn-sm"
      type="button"
    >
      Small
    </button>
    <button
      class="btn bg-primary h-10 btn-primary btn-md"
      type="button"
    >
      Default
    </button>
    <button
      class="btn bg-primary h-10 btn-primary btn-lg"
      type="button"
    >
      Large
    </button>
    <button
      class="btn bg-primary h-10 btn-primary btn-sm"
      type="button"
    >
      🔍
    </button>
  </div>
  <div
    class="space-x-2"
  >
    <button
      aria-disabled="true"
      class="btn bg-primary h-10 btn-primary btn-md"
      disabled=""
      type="button"
    >
      Disabled
    </button>
    <button
      aria-busy="true"
      aria-disabled="true"
      class="btn bg-primary h-10 btn-primary btn-md"
      disabled=""
      type="button"
    >
      <svg
        aria-hidden="true"
        class="animate-spin h-4 w-4"
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          class="opacity-25"
          cx="12"
          cy="12"
          r="10"
          stroke="currentColor"
          stroke-width="4"
        />
        <path
          class="opacity-75"
          d="m4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"
          fill="currentColor"
        />
      </svg>
    </button>
    <button
      class="btn bg-primary h-10 btn-primary btn-md"
      type="button"
    >
      <span
        aria-hidden="true"
        class="mr-2 inline-flex items-center"
      >
        <span>
          ←
        </span>
      </span>
      With Icon
    </button>
  </div>
</div>
`;

exports[`Visual Regression Tests > Card Component Screenshots > should match card layouts screenshot 1`] = `
<div
  class="p-4 space-y-4 bg-gray-50"
>
  <div
    class="card bg-base-100 transition-shadow shadow-xl w-80"
  >
    <div
      class="card-body flex flex-col space-y-1.5 p-6"
    >
      <h3
        class="text-2xl font-semibold tracking-tight card-title"
      >
        Basic Card
      </h3>
      <p
        class="text-sm text-muted-foreground"
      >
        Simple card layout
      </p>
    </div>
    <div
      class="card-body p-6 pt-0"
    >
      <p>
        This is the card content.
      </p>
    </div>
    <div
      class="card-actions justify-end flex items-center p-6 pt-0"
    >
      <button
        class="btn bg-primary h-10 btn-primary btn-sm"
        type="button"
      >
        Action
      </button>
    </div>
  </div>
  <div
    class="card bg-base-100 transition-shadow shadow-xl w-80"
  >
    <div
      class="card-body flex flex-col space-y-1.5 p-6"
    >
      <div
        class="flex items-center justify-between"
      >
        <h3
          class="text-2xl font-semibold tracking-tight card-title"
        >
          Card with Badge
        </h3>
        <span
          class="badge inline-flex items-center gap-1.5 font-semibold transition-all duration-200 transform hover:scale-105 focus:outline-none focus:ring-2 focus:ring-offset-1 shadow-sm badge-neutral shadow-neutral/25 hover:shadow-lg hover:shadow-neutral/40 badge-sm"
        >
          <span
            class="truncate"
          >
            New
          </span>
        </span>
      </div>
    </div>
    <div
      class="card-body p-6 pt-0"
    >
      <p>
        Card with badge in header.
      </p>
    </div>
  </div>
</div>
`;

exports[`Visual Regression Tests > Card Component Screenshots > should match complex card screenshot 1`] = `
<div
  class="p-4 bg-white"
>
  <div
    class="card bg-base-100 transition-shadow shadow-xl w-96"
  >
    <div
      class="card-body flex flex-col space-y-1.5 p-6"
    >
      <div
        class="flex items-start justify-between"
      >
        <div>
          <h3
            class="text-2xl font-semibold tracking-tight card-title"
          >
            Project Dashboard
          </h3>
          <p
            class="text-sm text-muted-foreground"
          >
            Overview of your projects
          </p>
        </div>
        <span
          class="badge inline-flex items-center gap-1.5 font-semibold transition-all duration-200 transform hover:scale-105 focus:outline-none focus:ring-2 focus:ring-offset-1 shadow-sm badge-secondary shadow-secondary/20 hover:shadow-md badge-sm"
        >
          <span
            class="truncate"
          >
            3 Active
          </span>
        </span>
      </div>
    </div>
    <div
      class="card-body p-6 pt-0 space-y-4"
    >
      <div
        class="grid grid-cols-2 gap-4"
      >
        <div
          class="text-center"
        >
          <div
            class="text-2xl font-bold"
          >
            12
          </div>
          <div
            class="text-sm text-gray-500"
          >
            Completed
          </div>
        </div>
        <div
          class="text-center"
        >
          <div
            class="text-2xl font-bold"
          >
            3
          </div>
          <div
            class="text-sm text-gray-500"
          >
            In Progress
          </div>
        </div>
      </div>
      <div
        class="space-y-2"
      >
        <div
          class="flex items-center justify-between"
        >
          <span>
            Website Redesign
          </span>
          <span
            class="badge inline-flex items-center gap-1.5 font-semibold transition-all duration-200 transform hover:scale-105 focus:outline-none focus:ring-2 focus:ring-offset-1 shadow-sm badge-outline hover:shadow-md badge-sm"
          >
            <span
              class="truncate"
            >
              Design
            </span>
          </span>
        </div>
        <div
          class="flex items-center justify-between"
        >
          <span>
            Mobile App
          </span>
          <span
            class="badge inline-flex items-center gap-1.5 font-semibold transition-all duration-200 transform hover:scale-105 focus:outline-none focus:ring-2 focus:ring-offset-1 shadow-sm badge-neutral shadow-neutral/25 hover:shadow-lg hover:shadow-neutral/40 badge-sm"
          >
            <span
              class="truncate"
            >
              Development
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="card-actions items-center p-6 pt-0 flex justify-between"
    >
      <button
        class="btn bg-primary h-10 btn-outline btn-md"
        type="button"
      >
        View All
      </button>
      <button
        class="btn bg-primary h-10 btn-primary btn-md"
        type="button"
      >
        New Project
      </button>
    </div>
  </div>
</div>
`;

exports[`Visual Regression Tests > Cross-platform Consistency > should match component integration screenshot 1`] = `
<div
  class="p-4 bg-gray-50"
>
  <div
    class="grid grid-cols-1 md:grid-cols-2 gap-4 max-w-4xl"
  >
    <div
      class="card bg-base-100 transition-shadow shadow-xl"
    >
      <div
        class="card-body flex flex-col space-y-1.5 p-6"
      >
        <div
          class="flex items-center justify-between"
        >
          <h3
            class="text-2xl font-semibold tracking-tight card-title"
          >
            User Profile
          </h3>
          <span
            class="badge inline-flex items-center gap-1.5 font-semibold transition-all duration-200 transform hover:scale-105 focus:outline-none focus:ring-2 focus:ring-offset-1 shadow-sm badge-neutral shadow-neutral/25 hover:shadow-lg hover:shadow-neutral/40 badge-sm"
          >
            <span
              class="truncate"
            >
              Active
            </span>
          </span>
        </div>
        <p
          class="text-sm text-muted-foreground"
        >
          Manage your account settings
        </p>
      </div>
      <div
        class="card-body p-6 pt-0 space-y-3"
      >
        <div
          class="w-full"
        >
          <div
            class="relative w-full"
          >
            <input
              class="input input-bordered w-full input-md input-bordered pl-10"
              value="John Doe"
            />
            <div
              class="absolute left-4 top-1/2 transform -translate-y-1/2 pointer-events-none"
            >
              <span>
                👤
              </span>
            </div>
          </div>
        </div>
        <div
          class="w-full"
        >
          <div
            class="relative w-full"
          >
            <input
              class="input input-bordered w-full input-md input-bordered pl-10"
              type="email"
              value="john@example.com"
            />
            <div
              class="absolute left-4 top-1/2 transform -translate-y-1/2 pointer-events-none"
            >
              <span>
                ✉️
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="card-actions items-center p-6 pt-0 flex justify-between"
      >
        <button
          class="btn bg-primary h-10 btn-outline btn-md"
          type="button"
        >
          Cancel
        </button>
        <button
          class="btn bg-primary h-10 btn-primary btn-md"
          type="button"
        >
          Save Changes
        </button>
      </div>
    </div>
    <div
      class="card bg-base-100 transition-shadow shadow-xl"
    >
      <div
        class="card-body flex flex-col space-y-1.5 p-6"
      >
        <h3
          class="text-2xl font-semibold tracking-tight card-title"
        >
          Project Status
        </h3>
        <p
          class="text-sm text-muted-foreground"
        >
          Current project overview
        </p>
      </div>
      <div
        class="card-body p-6 pt-0"
      >
        <div
          class="space-y-2"
        >
          <div
            class="flex items-center justify-between"
          >
            <span>
              Website
            </span>
            <span
              class="badge inline-flex items-center gap-1.5 font-semibold transition-all duration-200 transform hover:scale-105 focus:outline-none focus:ring-2 focus:ring-offset-1 shadow-sm badge-neutral shadow-neutral/25 hover:shadow-lg hover:shadow-neutral/40 badge-sm"
            >
              <span
                class="truncate"
              >
                In Progress
              </span>
            </span>
          </div>
          <div
            class="flex items-center justify-between"
          >
            <span>
              Mobile App
            </span>
            <span
              class="badge inline-flex items-center gap-1.5 font-semibold transition-all duration-200 transform hover:scale-105 focus:outline-none focus:ring-2 focus:ring-offset-1 shadow-sm badge-secondary shadow-secondary/20 hover:shadow-md badge-sm"
            >
              <span
                class="truncate"
              >
                Planning
              </span>
            </span>
          </div>
          <div
            class="flex items-center justify-between"
          >
            <span>
              API
            </span>
            <span
              class="badge inline-flex items-center gap-1.5 font-semibold transition-all duration-200 transform hover:scale-105 focus:outline-none focus:ring-2 focus:ring-offset-1 shadow-sm badge-error shadow-error/25 hover:shadow-lg hover:shadow-error/40 badge-sm"
            >
              <span
                class="truncate"
              >
                Blocked
              </span>
            </span>
          </div>
        </div>
      </div>
      <div
        class="card-actions justify-end flex items-center p-6 pt-0"
      >
        <button
          class="btn bg-primary h-10 btn-primary btn-md w-full"
          type="button"
        >
          View Details
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Visual Regression Tests > Dark Mode Screenshots > should match dark mode components screenshot 1`] = `
<div
  class="p-4 bg-slate-900 text-white"
>
  <div
    class="space-y-4"
  >
    <div
      class="space-x-2"
    >
      <button
        class="btn bg-primary h-10 btn-primary btn-md"
        type="button"
      >
        Default
      </button>
      <button
        class="btn bg-primary h-10 btn-error btn-md"
        type="button"
      >
        Destructive
      </button>
      <button
        class="btn bg-primary h-10 btn-outline btn-md"
        type="button"
      >
        Outline
      </button>
    </div>
    <div
      class="card transition-shadow shadow-xl w-80 bg-slate-800 border-slate-700"
    >
      <div
        class="card-body flex flex-col space-y-1.5 p-6"
      >
        <h3
          class="text-2xl font-semibold tracking-tight card-title text-white"
        >
          Dark Card
        </h3>
        <p
          class="text-sm text-slate-300"
        >
          Card in dark theme
        </p>
      </div>
      <div
        class="card-body p-6 pt-0"
      >
        <div
          class="w-full"
        >
          <div
            class="relative w-full"
          >
            <input
              class="input input-bordered w-full input-md input-bordered bg-slate-700 border-slate-600 text-white"
              placeholder="Dark input..."
            />
          </div>
        </div>
      </div>
      <div
        class="card-actions justify-end flex items-center p-6 pt-0"
      >
        <button
          class="btn bg-primary h-10 btn-primary btn-md"
          type="button"
        >
          Dark Action
        </button>
      </div>
    </div>
    <div
      class="flex gap-2"
    >
      <span
        class="badge inline-flex items-center gap-1.5 font-semibold transition-all duration-200 transform hover:scale-105 focus:outline-none focus:ring-2 focus:ring-offset-1 shadow-sm badge-neutral shadow-neutral/25 hover:shadow-lg hover:shadow-neutral/40 badge-sm"
      >
        <span
          class="truncate"
        >
          Dark Badge
        </span>
      </span>
      <span
        class="badge inline-flex items-center gap-1.5 font-semibold transition-all duration-200 transform hover:scale-105 focus:outline-none focus:ring-2 focus:ring-offset-1 shadow-sm badge-outline hover:shadow-md badge-sm"
      >
        <span
          class="truncate"
        >
          Dark Outline
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Visual Regression Tests > Input Component Screenshots > should match input form screenshot 1`] = `
<div
  class="p-4 bg-white"
>
  <form
    class="space-y-4 w-80"
  >
    <div>
      <div
        class="w-full"
      >
        <div
          class="relative w-full"
        >
          <input
            class="input input-bordered w-full input-md input-bordered"
            placeholder="Enter first name..."
            value="John"
          />
        </div>
      </div>
    </div>
    <div>
      <div
        class="w-full"
      >
        <div
          class="relative w-full"
        >
          <input
            class="input input-bordered w-full input-md input-bordered pl-10"
            placeholder="Enter email..."
            type="email"
            value="john@example.com"
          />
          <div
            class="absolute left-4 top-1/2 transform -translate-y-1/2 pointer-events-none"
          >
            <span>
              ✉️
            </span>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        class="w-full"
      >
        <div
          class="relative w-full"
        >
          <input
            class="input input-bordered w-full input-md input-bordered"
            placeholder="Enter name..."
          />
        </div>
      </div>
    </div>
    <div>
      <div
        class="w-full"
      >
        <div
          class="relative w-full"
        >
          <input
            aria-describedby="input-help"
            aria-invalid="true"
            class="input input-bordered w-full input-md input-error border-destructive input-bordered"
            placeholder="Enter password..."
            type="password"
          />
        </div>
        <div
          class="label"
        >
          <span
            class="label-text-alt text-destructive"
            id="input-help"
          >
            Password must be at least 8 characters
          </span>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`Visual Regression Tests > Input Component Screenshots > should match input variants screenshot 1`] = `
<div
  class="p-4 space-y-4 bg-white w-80"
>
  <div
    class="w-full"
  >
    <div
      class="relative w-full"
    >
      <input
        class="input input-bordered w-full input-md input-bordered"
        placeholder="Default input"
      />
    </div>
  </div>
  <div
    class="w-full"
  >
    <div
      class="relative w-full"
    >
      <input
        class="input input-bordered w-full input-md input-bordered"
        placeholder="Email input"
        type="email"
      />
    </div>
  </div>
  <div
    class="w-full"
  >
    <div
      class="relative w-full"
    >
      <input
        class="input input-bordered w-full input-md input-bordered"
        disabled=""
        placeholder="Disabled input"
      />
    </div>
  </div>
  <div
    class="w-full"
  >
    <div
      class="relative w-full"
    >
      <input
        aria-invalid="true"
        class="input input-bordered w-full input-md input-error border-destructive input-bordered"
        placeholder="Error input"
      />
    </div>
  </div>
  <div
    class="w-full"
  >
    <div
      class="relative w-full"
    >
      <input
        class="input input-bordered w-full input-md input-bordered pl-10"
        placeholder="With left icon"
      />
      <div
        class="absolute left-4 top-1/2 transform -translate-y-1/2 pointer-events-none"
      >
        <span>
          🔍
        </span>
      </div>
    </div>
  </div>
  <div
    class="w-full"
  >
    <div
      class="relative w-full"
    >
      <input
        class="input input-bordered w-full input-md input-bordered pr-10"
        placeholder="With right icon"
      />
      <div
        class="absolute right-4 top-1/2 transform -translate-y-1/2 pointer-events-none"
      >
        <span>
          ✓
        </span>
      </div>
    </div>
  </div>
  <div>
    <div
      class="w-full"
    >
      <div
        class="relative w-full"
      >
        <input
          aria-describedby="input-help"
          class="input input-bordered w-full input-md input-bordered"
          placeholder="With label and helper"
        />
      </div>
      <div
        class="label"
      >
        <span
          class="label-text-alt"
          id="input-help"
        >
          This is helper text
        </span>
      </div>
    </div>
  </div>
  <div>
    <div
      class="w-full"
    >
      <div
        class="relative w-full"
      >
        <input
          aria-describedby="input-help"
          aria-invalid="true"
          class="input input-bordered w-full input-md input-error border-destructive input-bordered"
          placeholder="With error state"
        />
      </div>
      <div
        class="label"
      >
        <span
          class="label-text-alt text-destructive"
          id="input-help"
        >
          This is an error message
        </span>
      </div>
    </div>
  </div>
</div>
`;
